# app/web/api/game/planets.py
@@ -5,6 +5,7 @@ from flask_login import current_user
 
 from app.application import app, db, serialize
 from app.application import login_required
+from app.application import json_description
 from app.models.game.territory import Territory
 from app.models.game.buildings import BuildingType
 from app.models.game.event import PositionalEventType
@@ -13,6 +14,7 @@ from app.models.game.event import PositionalEventType
 @app.route('/api/territory/<int:territory_id>', methods=['GET'])
 @login_required
 @serialize
+@json_description(file='descriptions/territories.json')
 def get_territory(territory_id):
     # TODO check building name before try to instanciate
     me = current_user.get()
@@ -25,6 +27,7 @@ def get_territory(territory_id):
 @app.route('/api/territory/<int:territory_id>/ships', methods=['GET'])
 @login_required
 @serialize
+@json_description(file='descriptions/territories.json')
 def get_territory_ships(territory_id):
     me = current_user.get()
     territory = Territory.get(id=territory_id, user=me)
@@ -36,6 +39,7 @@ def get_territory_ships(territory_id):
 @app.route('/api/territory/<int:territory_id>/<string:building>', methods=['POST'])
 @login_required
 @serialize
+@json_description(file='descriptions/territories.json')
 def build(territory_id, building):
     # TODO check building name before try to instanciate
     type = BuildingType.get_by_name(name=building)
@@ -54,6 +58,7 @@ def build(territory_id, building):
 @app.route('/api/territory/<int:territory_id>/ship', methods=['POST'])
 @login_required
 @serialize
+@json_description(file='descriptions/territories.json')
 def build_defense_or_ship(territory_id):
     type = PositionalEventType(request.path.split('/')[-1:][0])
     items = request.json.get('items')
